[package]
name = "garaga-zero"
version = "0.1.0"
edition = "2021"

[lib]
name = "garaga_zero"
path = "hints/rust-vm/src/lib.rs"

[dependencies]
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
cairo-vm-base = { git = "https://github.com/bankaixyz/cairo-vm-base" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.215"
serde_json = "1.0.132"
thiserror = "1.0"
ark-ff = "0.4.0"
ark-bls12-381 = "0.4.0"
hex = "0.4.3"
